# Hackathon-myr2017

./: .gitignore  .gitmodules  AUTEURS.md  CMakeLists.txt  README.md  auteur  build.sh
EpitechClient/: constants.hh  exceptions.cpp  exceptions.hh  main.cpp  run_camera_and_display.cpp  run_camera_and_display.hh  utilities.cpp  utilities.hh
EpitechClient/Algorithm/: Algorithm.cpp  Algorithm.hh
EpitechClient/Display/: Display.cpp  Display.hh  RenderLidar.cpp  RenderLidar.hh
EpitechClient/Gateway/: Gateway.cpp  Gateway.hh  Gateway.hpp  Socket.cpp  Socket.hh
EpitechClient/Oz/: Actuator.cpp  Actuator.hh  CPU.cpp  CPU.hh  Camera.cpp  Camera.hh  CameraException.cpp  CameraException.hh  Exception.cpp  Exception.hh  GPS.cpp  GPS.hh  Gyro.cpp  Gyro.hh  Lidar.cpp  Lidar.hh  Motor.cpp  Motor.hh  ODO.cpp  ODO.hh  Oz.cpp  Oz.hh  Unit.hh
EpitechClient/Playground/: Arguments.cpp  Arguments.hh  Playground.cpp  Playground.hh  System.cpp  System.hh
cmake/: FindApiCodec.cmake  LibApiCodec.cmake  compiler.cmake  helpers.cmake  targets.cmake
patch/: ApiCodec.patch
src/: main.cc
